--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="https://cdn.glitch.global/0dd1f9e8-5f95-4760-ad67-93906c54fa55/favicon%20(1).ico?v=1669734922319" />
-    <script type="module" crossorigin src="/assets/index.9c751ad5.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.e1b7c06f.js">
-    <link rel="stylesheet" href="/assets/index.9a72ccc5.css">
+    <script type="module" crossorigin src="/furys-1v1/assets/index.9c751ad5.js"></script>
+    <link rel="modulepreload" href="/furys-1v1/assets/vendor.e1b7c06f.js">
+    <link rel="stylesheet" href="/furys-1v1/assets/index.9a72ccc5.css">
   </head>
   <body>
     <div id="root"></div>
